--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -170,6 +170,7 @@
     <Content Include="Content\Scripts\jquery-1.9.1.min.js" />
     <Content Include="Content\Scripts\npm.js" />
     <Content Include="JavaScript\app.js" />
+    <Content Include="JavaScript\Products\productCard-directive.js" />
     <Content Include="JavaScript\Products\products-controller.js" />
     <Content Include="JavaScript\Products\products-service.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -178,6 +179,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Templates\Products\ProductCard.html" />
     <Content Include="Web.config" />
     <Content Include="Content\Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Shared\_Layout.cshtml" />
